--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 
-<footer class="page-footer brown ligthen-4 ">
+<footer class="page-footer light-blue darken-1 ">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Code4Pro</h5>
+      <h5> <%= link_to 'Nzingu', root_path,class:"white-text"%></h5>
         <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
       </div>
       <div class="col l4 offset-l2 s12">
