--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,25 +1,20 @@
-
+<h4>A propos</h4>
 <div class="card z-depth-3">
-	<div class="card-content white-text">
-		<div class="row">
-			<div class="col m6">
-				<a class="twitter-timeline" href="https://twitter.com/Code4Startup" data-widget-id="587633580509044736">Tweets by @Code4Startup</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-			</div>
-			<div class="col m6">
-				<div class="card-panel grey lighten-5 z-depth-1">
-					<div class="row valign-wrapper">
-						<div class="col m3">
-							<%= image_tag "avatar.jpg", class: "circle responsive-img" %>
-						</div>
-						<div class="col m9">
-							<span class="black-text">
-								I don't know what to say. Let the world tell you more... :)
-							</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="card-content white-text">
+    <div class="row">
+      <div class="col m6">
+        <%= image_tag "vichy.jpg", class: " responsive-img" %>
+      </div>
+      <div class="col m6">
+        <div class="card-panel teal lighten-1 z-depth-1">
+          <span class="white-text">
+            <b>
+              <h4>Vichy....</h4>
+            </b>
+            je suis Cheumani Victoire enseignante de français et de langue maternelle au Lycée classique de Bafang (au Cameroun). J'ai fait mon cycle secondaire au Collège Bilingue Saint-Paul où la langue fe'efe'e était l'une des matières enseignées, et à L'Université de Yaoundé I j'ai continué mes études en Lettres Modernes Françaises avec pour spécialité la Linguistique. C'est d'ailleurs cette formation en Linguistique qui m'a permis d'acquérir des connaissances dans l'écriture et la valorisation des langues maternelles. Après l'obtention d'une Licence en LMF, j'ai continué en Maîtrise où le sujet de ma thèse était : l'amélioration des alphabets des Langues camerounaises et l'expression de la tradition dans la vie quotidienne. Régulièrement nous organisons avec les Inspecteurs Nationaux des séminaires de formation des enfants, des étudiants, des élèves dans l'apprentissage et la valorisation de la langue maternelle et nos traditions. Je fais des cours particuliers de langue à des personnes privées, à des groupes d'enfants, j'écris des brochures sur les alphabets des langues du Cameroun... Je me suis mise au service de mes sœurs et frères Haut-Nkamois pour les intéresser à la bonne articulation et à l'écriture de la langue..  Ma porte vous est ouverte
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
