--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= csp_meta_tag %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <%= yield :head %>
     <script src="//load.sumome.com/" data-sumo-site-id="2ff25a90bb5d155a641e29a94e557e3bf73e6420d2ba8f96e14f33f80709c5fb" async="async"></script>
