--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
       </span>
     </div>
     <div class="row center">
-      <%= link_to 'All the Courses', project_index_path,class:"btn-large waves-effect waves-light orange" %>
+      <%= link_to 'Listes des Cours disponible', project_index_path,class:"btn-large waves-effect waves-light orange" %>
     </div>
     <br>
     <br>
