--- a/app/views/layouts/_dropdown.html.erb
+++ b/app/views/layouts/_dropdown.html.erb
@@ -1,14 +1,14 @@
  <!-- Dropdown Structure -->
 <ul id='dropdown1' class='dropdown-content'>
-  <li><%= link_to 'My Profile', edit_user_registration_path %></li>
-  <li><%= link_to 'My Courses', myprojects_path %></li>
+  <li><%= link_to 'Mon Profil', edit_user_registration_path %></li>
+  <li><%= link_to 'Mes Cours', myprojects_path %></li>
   <li class="divider" tabindex="-1"></li>
  <li> <%= link_to 'Log out', destroy_user_session_path,method: :delete %></li>
 
 </ul>
 <ul id='dropdown2' class='dropdown-content'>
- <li><%= link_to 'My Profile', edit_user_registration_path %></li>
-   <li><%= link_to 'My Courses', myprojects_path %></li>
+ <li><%= link_to 'Mon Profil', edit_user_registration_path %></li>
+   <li><%= link_to 'Mes Cours', myprojects_path %></li>
   <li class="divider" tabindex="-1"></li>
   <li> <%= link_to 'Log out', destroy_user_session_path,method: :delete %></li>
 </ul>
