--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <br>
     <br>
-    <h1 class="header center orange-text">Akademie on Fefefe</h1>
+    <h1 class="header center orange-text">Nfefe School</h1>
     <div class="row center">
 
       <span class="header col s12 light">
